--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -1,19 +1,16 @@
-/*!
- * Start Bootstrap - Grayscale v5.0.9 (https://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
- */
 @font-face {
   font-family: "webFont";
   src: url("../vendor/fontawesome-free/webfonts/webfont.ttf");
 }
+
+/*============================================NAV CSS============================================*/
 
 #mainNav {
   min-height: 56px;
   background-color: #fff
 }
 
-a{
+a {
   font-size: 20px;
 }
 
@@ -113,6 +110,9 @@ a{
   }
 }
 
+/*============================================NAV CSS============================================*/
+
+/*==========================================HEADER CSS===========================================*/
 .masthead {
   position: relative;
   width: 100%;
@@ -166,6 +166,9 @@ a{
   }
 }
 
+/*==========================================HEADER CSS===========================================*/
+
+/*===========================================BTN CSS==============================================*/
 .btn {
   box-shadow: 0 .1875rem .1875rem 0 rgba(0, 0, 0, .1) !important;
   padding: 1.25rem 2rem;
@@ -193,26 +196,43 @@ a{
   background-color: #467370 !important
 }
 
+/*===========================================BTN CSS==============================================*/
+
+/*===========================================ABOUT CSS============================================*/
 .about-section {
   padding-top: 3rem;
   background: linear-gradient(to bottom, #161616 0, rgba(22, 22, 22, .9) 75%, rgba(22, 22, 22, .8) 100%);
+
 
   display: flex;
   flex-direction: column;
 }
 
-.about-section img{
+.about-section img {
   height: 175px;
   width: 100%;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
+
+}
+
+.about-section h2 {
+  margin-bottom: 2.5rem !important;
 }
 
 .about-section p {
-  margin-bottom: 9rem;
+  margin-bottom: 2rem;
 }
 
+.about-section .space {
+  margin-bottom: 7.6rem;
+  color: white;
+}
+
+/*===========================================ABOUT CSS============================================*/
+
+/*======================================PROJECTS CSS(NOTUSE)======================================*/
 .projects-section {
   padding: 10rem 0;
 }
@@ -226,6 +246,7 @@ a{
     padding: 0 0 0 2rem;
     border-left: .5rem solid #64a19d
   }
+
 }
 
 /*.projects-section .project-text {
@@ -245,26 +266,59 @@ a{
   }
 }
 
+/*======================================PROJECTS CSS(NOTUSE)======================================*/
+
+/*==========================================SIGNUP CSS============================================*/
 .signup-section {
-  padding: 10rem 0;
+  padding: 3rem 0;
   background: linear-gradient(to bottom, rgba(22, 22, 22, .1) 0, rgba(22, 22, 22, .5) 75%, #161616 100%), url(../img/bg-masthead.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: cover
+  background-size: cover;
+
 }
 
 .signup-section .form-inline input {
-  box-shadow: 0 .1875rem .1875rem 0 rgba(0, 0, 0, .1) !important;
-  padding: 1.25rem 2rem;
+  box-shadow: 0 .1875rem .1875rem 0 rgba(0, 0, 0, 0.2) !important;
+  margin-bottom: 10px;
+  margin-top: 15px;
+  width: 350px;
   height: auto;
   font-family: "webFont";
   font-size: 80%;
   text-transform: uppercase;
   letter-spacing: .15rem;
-  border: 0
+  border: 1.2px solid #64a19d;
 }
 
+.signup-section .form-inline textarea {
+  width: 350px;
+  height: 100px;
+  margin-top: 15px;
+  font-weight: none;
+  font-family: "webFont";
+  font-size: 80%;
+  text-transform: uppercase;
+  letter-spacing: .15rem;
+}
+
+.signup-section .form-inline {
+  display: flex;
+  flex-direction: column;
+  margin-top: -30px;
+}
+
+.signup-section .btn {
+  margin-top: 15px;
+  padding: 1rem;
+  width: 100px;
+  text-justify: center;
+}
+
+/*==========================================SIGNUP CSS============================================*/
+
+/*==========================================CONTACT CSS===========================================*/
 .contact-section {
   padding: 5rem 0 0
 }
@@ -309,13 +363,16 @@ a{
   color: #fff
 }
 
+/*==========================================CONTACT CSS===========================================*/
+
+/*==========================================GENERAL CSS===========================================*/
 body {
   font-family: "webFont";
   letter-spacing: .0625em
 }
 
 a {
-  color: #64a19d
+  color:#64a19d;
 }
 
 a:focus,
@@ -337,5 +394,50 @@ a:hover {
 }
 
 footer {
-  padding: 5rem 0
+  padding-top: 4rem;
+  padding-bottom: 1rem;
+}
+
+footer .container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.logoCards{
+  color:#64a19d;
+  transform: scale(2, 2);
+  margin-bottom: 30px;
+}
+
+.logos a{
+  font-size: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media (max-width: 767px) {
+  
+  .logos{
+    margin-left: 120px;
+    margin-top: -35px;
+  }
+
+  footer p{
+    margin-top: 15px;
+    margin-bottom: 0;
+    margin-left: 30px;
+  }
+
+  .signup-section .form-inline input {
+    width: 300px;
+    margin-left: -3px
+  }
+  
+  .signup-section .form-inline textarea {
+    width: 300px;
+    margin-left: -3px
+  }
+
 }
