[Fix] corrigiendo margen en el menu para moviles

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -439,4 +439,11 @@ footer .container{
     margin-left: -3px
   }
 
+  #mainNav .disabled {
+    display: none;
+  }
+
+  #mainNav ul:last-child {
+    margin-bottom: 20px;
+  }
 }
