--- a/css/login.css
+++ b/css/login.css
@@ -49,6 +49,17 @@ a:hover {
   color: #fff;
 }
 
+.clickBigger{
+  padding-left: 55px;
+  padding-right: 55px;
+  text-decoration: none;
+  color: white!important;
+}
+
+.clickBigger:hover{
+  text-decoration: none; 
+}
+
 /*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
 	margin: 0px;
@@ -112,7 +123,8 @@ label {
 button {
 	outline: none !important;
 	border: none;
-	background: transparent;
+  background: transparent;
+  width: 1px;
 }
 
 button:hover {
