--- a/css/calendario.css
+++ b/css/calendario.css
@@ -245,3 +245,8 @@ input:checked+.mov:after {
     left: 465px;
     top: -450px;
 }
+
+.celOcu {
+    background: red solid;
+    color: red solid;
+}
