Fix: Fixing Routes

--- a/src/views/calendar.ejs
+++ b/src/views/calendar.ejs
@@ -25,16 +25,16 @@
 		  <div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index.ejs">Inicio</a>
+				<a class="nav-link js-scroll-trigger" href="/index">Inicio</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/calendar.ejs">Reserva</a>
+				<a class="nav-link js-scroll-trigger" href="/calendar">Reserva</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index.ejs#signup">Contacto</a>
+				<a class="nav-link js-scroll-trigger" href="/index#signup">Contacto</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/login.ejs">Cerrar Sesión</a>
+				<a class="nav-link js-scroll-trigger" href="/login">Cerrar Sesión</a>
 			  </li>
 			</div>
 			</ul>
