--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -24,27 +24,27 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="/index.ejs"><img src="/public/img/deiL.png" alt="dei"></a>
+      <a class="navbar-brand js-scroll-trigger" href="/index"><img src="/public/img/deiL.png" alt="dei"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/index.ejs">Inicio</a>
+            <a class="nav-link js-scroll-trigger" href="/index">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/calendar.ejs">Reserva</a>
+            <a class="nav-link js-scroll-trigger" href="/calendar">Reserva</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contacto</a>
           </li>
           <li class="nav-item login">
 
-            <a class="nav-link js-scroll-trigger" href="/register.ejs">Regístrate</a>
+            <a class="nav-link js-scroll-trigger" href="/register">Regístrate</a>
           </li>
           <li class="nav-item login">
-            <a class="nav-link js-scroll-trigger" href="/login.ejs">Iniciar Sesión</a>
+            <a class="nav-link js-scroll-trigger" href="/login">Iniciar Sesión</a>
 
           </li>
           <div class="logout">
@@ -81,7 +81,7 @@
           <img src="/public/img/calendario.jpg" alt="calendario" id="uno">
           <p class="text-white-50">Paso 1: Entra al calendario en el siguiente enlace para poder ver los laboratorios y
             su disponibilidad.
-            <a href="/calendar.ejs">Click aqui</a>. ¡Recuerda que tienes que
+            <a href="/calendar">Click aqui</a>. ¡Recuerda que tienes que
             haber iniciado sesion!</p>
           </article>
         </div>
@@ -185,7 +185,7 @@
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
       <div class="logos">
-        <a href="https://www.facebook.com/azureknightsgaming/photos/a.242670865937784/726160854255447/?type=3&theater" target="_blank" class="fab fa-facebook-f fb"></a>
+        <a href="https://www.facebook.com/deiucasv/" target="_blank" class="fab fa-facebook-f fb"></a>
         <a href="https://twitter.com/nextaldana?lang=es" class="fab fa-twitter tw" target="_blank"></a>
         <a href="https://github.com/BryOrellana/ProyectoPW" class="fab fa-github git" target="_blank"></a>
       </div>
