--- a/src/views/changePassword.ejs
+++ b/src/views/changePassword.ejs
@@ -23,23 +23,23 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 		<div class="container">
-		  <a class="navbar-brand js-scroll-trigger" href="/index.ejs"><img src="/public/img/deiL.png" alt="dei"></a>
+		  <a class="navbar-brand js-scroll-trigger" href="/index"><img src="/public/img/deiL.png" alt="dei"></a>
 		  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			Menu
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index.ejs">Inicio</a>
+				<a class="nav-link js-scroll-trigger" href="/index">Inicio</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/calendar.ejs">Reserva</a>
+				<a class="nav-link js-scroll-trigger" href="/calendar">Reserva</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index.ejs#signup">Contacto</a>
+				<a class="nav-link js-scroll-trigger" href="/index#signup">Contacto</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/login.ejs">Login</a>
+                    <a class="nav-link js-scroll-trigger" href="/login">Login</a>
                 </li>
 			</div>
 			</ul>
@@ -73,11 +73,11 @@
 
 					<div class="container-login100-form-btn m-t-32">
 						<button class="login100-form-btn" id="submit_btn">
-							<a class = "clickBigger" href="/index.ejs">Enviar</a>
+							<a class = "clickBigger" href="/index">Enviar</a>
                         </button>
                         <!--boton de cancelar-->
                         <button class="login100-form-btn" id="cancel_btn">
-							<a class = "clickBigger" href="/login.ejs">Cancelar</a>
+							<a class = "clickBigger" href="/login">Cancelar</a>
 						</button>
 					</div>
 
