--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -23,17 +23,17 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 		<div class="container">
-		  <a class="navbar-brand js-scroll-trigger" href="/index.ejs"><img src="/public/img/deiL.png" alt="dei"></a>
+		  <a class="navbar-brand js-scroll-trigger" href="/index"><img src="/public/img/deiL.png" alt="dei"></a>
 		  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			Menu
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index.ejs">Inicio</a>
+				<a class="nav-link js-scroll-trigger" href="/index">Inicio</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index.ejs#signup">Contacto</a>
+				<a class="nav-link js-scroll-trigger" href="/index#signup">Contacto</a>
 			  </li>
 			</div>
 			</ul>
@@ -61,19 +61,19 @@
 					</div>
 
 					<div>
-						<a class ="forgot" id="forgot" href="/changePassword.ejs">Olvidaste tu contraseña?</a>
+						<a class ="forgot" id="forgot" href="/changePassword">Olvidaste tu contraseña?</a>
 					</div>
 
 					<div class="container-login100-form-btn m-t-32">
 						<button class="login100-form-btn" type="button">
-							<a class = "clickBigger" href="/index.ejs" id="submit_btn" >Entrar!</a>
+							<a class = "clickBigger" href="/index" id="submit_btn" >Entrar!</a>
 						</button>
 					</div>
 					<hr>
 					<div>
 						<p>
 						<label class="label-plat"for="new">Nuevo en la plataforma?</label>
-						<a class ="new" id="new" href="/register.ejs">Registrate aquí</a>
+						<a class ="new" id="new" href="/register">Registrate aquí</a>
 						</p>
 					</div>
 				</form>
