--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -24,14 +24,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="/index"><img src="/public/img/deiL.png" alt="dei"></a>
+      <a class="navbar-brand js-scroll-trigger" href="/"><img src="/public/img/deiL.png" alt="dei"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/index">Inicio</a>
+            <a class="nav-link js-scroll-trigger" href="/">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="/calendar">Reserva</a>
