--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -23,17 +23,17 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 		<div class="container">
-		  <a class="navbar-brand js-scroll-trigger" href="/index"><img src="/public/img/deiL.png" alt="dei"></a>
+		  <a class="navbar-brand js-scroll-trigger" href="/"><img src="/public/img/deiL.png" alt="dei"></a>
 		  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			Menu
 		  </button>
 		  <div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index">Inicio</a>
+				<a class="nav-link js-scroll-trigger" href="/">Inicio</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index#signup">Contacto</a>
+				<a class="nav-link js-scroll-trigger" href="/#signup">Contacto</a>
 			  </li>
 			</div>
 			</ul>
@@ -48,26 +48,26 @@
 				<span class="login100-form-title p-b-41">
 					Registra un Usuario!
 				</span>
-				<form class="login100-form validate-form p-b-33 p-t-5">
+				<form action="/addUser" method="POST" class="login100-form validate-form p-b-33 p-t-5">
 
 					<div class="wrap-input100 validate-input" data-validate="Enter username">
-						<input class="input100" type="text" name="username" placeholder="Usuario" id="carnet_field">
+						<input class="input100" type="text" name="carnet" placeholder="Usuario" id="carnet_field">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Contraseña" id="password_field">
+						<input class="input100" type="password" name="password" placeholder="Contraseña" id="password_field">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
                     </div>
-
+					
                     <div class="wrap-input100 validate-input" data-validate="Enter password">
-                            <input class="input100" type="password" name="pass" placeholder="Confirmar contraseña" id="password_field">
+                            <input class="input100" type="password" placeholder="Confirmar contraseña" id="password_field">
                             <span class="focus-input100" data-placeholder="&#xe80f;"></span>
                     </div>
-
+					
 					<div class="container-login100-form-btn m-t-32">
-						<button class="login100-form-btn" type="button">
-							<a class = "clickBigger" href="/index" id="submit_btn" >Crear!</a>
+						<button class="login100-form-btn" type="submit">
+							<a class = "clickBigger" id="submit_btn" >Crear!</a>
 						</button>
 					</div>
 
