Fix: Arreglando rutas

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -48,6 +48,12 @@
             <a class="nav-link js-scroll-trigger" href="/login">Iniciar Sesión</a>
 
           </li>
+          </li>
+          <li class="nav-item login">
+            <a class="nav-link js-scroll-trigger" href="/changePassword">Cambiar Contraseña</a>
+
+          </li>
+
           <div class="logout">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#logout">
