--- a/src/views/changePassword.hbs
+++ b/src/views/changePassword.hbs
@@ -39,7 +39,7 @@
 				<a class="nav-link js-scroll-trigger" href="/#signup">Contacto</a>
               </li>
               <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="/login">Login</a>
+                    <a class="nav-link js-scroll-trigger" href="/login">Iniciar Sesion</a>
                 </li>
 			</div>
 			</ul>
