--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -60,13 +60,9 @@
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
-					<div>
-						<a class ="forgot" id="forgot" href="/changePassword">Olvidaste tu contraseña?</a>
-					</div>
-
 					<div class="container-login100-form-btn m-t-32">
 						<button class="login100-form-btn" type="button">
-							<a class = "clickBigger" href="/index" id="submit_btn" >Entrar!</a>
+							<a class = "clickBigger" href="/" id="submit_btn" >Entrar!</a>
 						</button>
 					</div>
 					<hr>
