--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -41,7 +41,7 @@
 		</div>
 	  </nav>
 
-<!--Login Form-->
+<!--Register Form-->
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('/public/img/stars.jpg');">
 			<div class="wrap-login100 p-t-30 p-b-50">
