--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -51,18 +51,18 @@
 				<form class="login100-form validate-form p-b-33 p-t-5">
 
 					<div class="wrap-input100 validate-input" data-validate="Enter username">
-						<input class="input100" type="text" name="username" placeholder="Usuario" id="carnet_field">
+						<input class="input100" type="text" name="carnet" placeholder="Usuario" id="carnet_field">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Contraseña" id="password_field">
+						<input class="input100" type="password" name="password" placeholder="Contraseña" id="password_field">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
 					<div class="container-login100-form-btn m-t-32">
-						<button class="login100-form-btn" type="button">
-							<a class = "clickBigger" href="/" id="submit_btn" >Entrar!</a>
+						<button class="login100-form-btn" type="submit">
+							<a class = "clickBigger" href="calendar" id="submit_btn">Entrar!</a>
 						</button>
 					</div>
 					<hr>
