--- a/src/views/display.hbs
+++ b/src/views/display.hbs
@@ -1,36 +1,85 @@
 {{#if message}}
-    {{message}}
+{{message}}
 {{/if}}
-<table border="1">
 
-        <tr>
+<head>
+        <title>Display</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-                <th>Carnet</th>
-                <th>Rol</th>
-                <th>Action</th>
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="../public/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="../public/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="../public/css/util.css">
+        <link rel="stylesheet" type="text/css" href="../public/css/reserva.css">
+        <!--===========================CSS PAL NAV====================================-->
+        <link rel="stylesheet" href="../public/css/grayscale.css">
+        <link href="../public/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <!--===============================================================================================-->
+</head>
 
-        </tr>
- 
-       Record Found {{ users.length  }}
-        {{#each users}}
-        <tr>
+<body>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+                <div class="container">
+                        <a class="navbar-brand js-scroll-trigger" href="/"><img src="../public/img/deiL.png"
+                                        alt="dei"></a>
+                        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                Menu
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarResponsive">
+                                <ul class="navbar-nav ml-auto">
+                                        <li class="nav-item">
+                                                <a class="nav-link js-scroll-trigger" href="/display">Usuarios</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link js-scroll-trigger" href="/reservas">Reservas</a>
+                                        </li>
+                                        <li class="nav-item">
+                                                <a class="nav-link js-scroll-trigger" href="/mensajes">Mensajes</a>
+                                        </li>
+                        </div>
+                        </ul>
+                </div>
+                </div>
+        </nav>
+        <div class="limiter">
+                <div class="container-login100" style="background-image: url('../public/img/bg-signup.jpg');">
 
-                <td>{{carnet}}</td>
-                <td>{{rol}}</td>
-                <td>
-                        <a href='edit/{{_id}}'>Edit</a> |    
-                 
-                        <a href='delete/{{_id}}'>Delete</a>
-                </td>
+                        <table class="tablaD" border="1">
 
-        </tr>
+                                <tr>
 
-        {{else}}
+                                        <th>Carnet</th>
+                                        <th>Rol</th>
+                                        <th>Action</th>
 
-        
-                 No Record Found
-        
-        {{/each}}
-</table>
+                                </tr>
 
- 
+                                Record Found {{ users.length  }}
+                                {{#each users}}
+                                <tr>
+
+                                        <td>{{carnet}}</td>
+                                        <td>{{rol}}</td>
+                                        <td>
+                                                <a href='edit/{{_id}}'>Edit</a> |
+
+                                                <a href='delete/{{_id}}'>Delete</a>
+                                        </td>
+
+                                </tr>
+
+                                {{else}}
+
+
+                                No Record Found
+
+                                {{/each}}
+                        </table>
+                </div>
+        </div>
+</body>
