--- a/src/views/reserva.hbs
+++ b/src/views/reserva.hbs
@@ -32,10 +32,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/">Inicio</a>
+                        <a class="nav-link js-scroll-trigger" href="/usuarios">Usuarios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/#signup">Contacto</a>
+                        <a class="nav-link js-scroll-trigger" href="/reservas">Reservas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/mensajes">Mensajes</a>
                     </li>
             </div>
             </ul>
