Fix: Fixing Admin Views, Add: Agregando tabla reservas

--- a/src/public/css/reserva.css
+++ b/src/public/css/reserva.css
@@ -106,7 +106,15 @@
 .tablaD{
   display: flex;
   justify-content: center;
-  background-color: white;
+  background-color: rgb(190, 190, 190);
+}
+
+td{
+  padding: 10 10 10 10;
+}
+
+th{
+  padding: 10 10 10 10;
 }
 
 .tablaE{
