--- a/src/views/mensajes.hbs
+++ b/src/views/mensajes.hbs
@@ -48,7 +48,7 @@
         </nav>
         <div class="limiter">
                 <div class="container-login100" style="background-image: url('../public/img/bg-signup.jpg');">
-                        <table class="tablaM" border="1">
+                        <table class="tablaD" border="1">
 
                                 <tr>
 
@@ -58,7 +58,6 @@
 
                                 </tr>
 
-                                Record Found {{ mesag.length  }}
                                 {{#each mesag}}
                                 <tr>
 
