--- a/src/views/reservas.hbs
+++ b/src/views/reservas.hbs
@@ -49,7 +49,7 @@
     </nav>
     <div class="limiter">
         <div class="container-login100" style="background-image: url('../public/img/bg-signup.jpg');">
-            <table class="tablaRES" border="1">
+            <table class="tablaD" border="1">
 
                 <tr>
 
@@ -61,8 +61,7 @@
                     <th>Hora final</th>
 
                 </tr>
-
-                Record Found {{ rese.length  }}
+                
                 {{#each rese}}
                 <tr>
                 <td>{{carnet_user}}</td>
