--- a/src/views/reserva.hbs
+++ b/src/views/reserva.hbs
@@ -1,3 +1,6 @@
+{{#if message}}
+{{message}}
+{{/if}}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -47,8 +50,8 @@
     </nav>
 
     <!--reserve form-->
-    <div class="limiter">
-        <div class="container-login100" style="background-image: url('../public/img/silverLaptop.jpg');">
+    <div class="limiter" style="background-image: url('../public/img/silverLaptop.jpg');">
+        <div class="container-login100">
             <div class="wrap-login100 p-t-30 p-b-50">
                 <span class="login100-form-title p-b-41">
                     Reserva
@@ -103,6 +106,24 @@
                     </div>
                 </form>
             </div>
+        </div>
+        <div class="container-login100">
+            <table class="tablaE" border="1">
+                <tr>
+                    <th>Reservas</th>
+                </tr>
+                {{#each rese}}
+                <tr>
+                <td>{{carnet_user}} reservo el {{numero_laboratorio}} el {{fecha}} de {{hora_inicio}} a {{hora_final}} </td>
+                </tr>
+
+                {{else}}
+
+
+                No Record Found
+
+                {{/each}}
+            </table>
         </div>
     </div>
 
