--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -48,7 +48,7 @@
 				<span class="login100-form-title p-b-41">
 					Accede a tu cuenta!
 				</span>
-				<form class="login100-form validate-form p-b-33 p-t-5">
+				<form class="login100-form validate-form p-b-33 p-t-5" action="/login" method="POST">
  
 					<div class="wrap-input100 validate-input" data-validate="Enter username">
 						<input class="input100" type="text" name="carnet" placeholder="Usuario" id="carnet_field">
